# Tools

./: .gitignore
PaperForge/: .gitignore  README.md  README.zh.md  paperforge-plan-v3.md  pyproject.toml
PaperForge/obsidian-plugin/: .gitignore  README.md  main.ts  manifest.json  package.json  styles.css
PaperForge/src/paperforge/: __init__.py  cli.py  config.py  pipeline.py
PaperForge/src/paperforge/generate/: __init__.py  glossary.py  qa_generator.py  summarizer.py  translator.py
PaperForge/src/paperforge/link/: __init__.py  crossref.py  linker.py  matcher.py  references.py  semantic_scholar.py
PaperForge/src/paperforge/llm/: __init__.py  client.py  prompts.py  schemas.py
PaperForge/src/paperforge/models/: paper.py
PaperForge/src/paperforge/parse/: __init__.py  docling_parser.py  fallback_parser.py  metadata.py
PaperForge/src/paperforge/store/: __init__.py  db.py  writer.py
PaperForge/src/paperforge/templates/: glossary.md.j2  index.md.j2  papers_index.md.j2  pending_review.md.j2  qa.md.j2  summary.md.j2
PaperForge/tests/: test_enhancements.py  test_generate.py  test_link.py  test_parse.py  test_pipeline.py  test_store.py
agent-long-memory/: .env  README.md  pyproject.toml  run_monitor.py
agent-long-memory-Hermes/: pyproject.toml  run_monitor.py
agent-long-memory-Hermes/src/agent_long_memory/: embeddings.py  memory_scope.py  monitor.html  monitor_api.py
agent-long-memory/scripts/: paper_search.py  start-agent-with-memory.ps1  start-monitor.ps1
agent-long-memory/skills/agent-long-memory/: SKILL.md
agent-long-memory/skills/agent-long-memory/agents/: openai.yaml
agent-long-memory/skills/agent-long-memory/references/: integration.md
agent-long-memory/skills/agent-long-memory/scripts/: memory_session.py
agent-long-memory/src/agent_long_memory/: __init__.py  access_config.py  embedding_worker.py  embeddings.py  harness.py  mcp_server.py  memory_config.py  memory_db.py  memory_scope.py  monitor.html  monitor_api.py  runtime.py  schema.py  semantic_memory.py
