[project]
name = "agent-long-memory"
version = "0.1.0"
description = "Workspace-scoped PostgreSQL/pgvector agent long memory."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_long_memory"]


